pom update, customlayer